Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-8604

Quota headroom tracking may be incorrect in the presence of hierarchical reservation.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.5.0
    • 1.4.2, 1.5.1, 1.6.0
    • allocation
    • None
    • Mesosphere Sprint 75
    • 2

    Description

      When calculating the global quota headroom, we subtract all unallocated reservations by doing

      for each role with reservation
      	availableHeadroom -= role total reservation - role allocated reservation;
      

      We only traverse roles with reservation. In the presence of hierarchal reservation, this is problematic. Consider a child role (e.g. "a/b") with no reservations, it can still get reserved resources if its ancestor has reservations (e.g. "a" has reservations). However, allocated reserved resources of role “a/b” will be ignored given the above code.

      The consequence is that availableHeadroom will be underestimated because allocated reservations are underestimated. This would lead to excessive resources set aside for quota headroom.

      Attachments

        Activity

          People

            mzhu Meng Zhu
            mzhu Meng Zhu
            Benjamin Mahler Benjamin Mahler
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: